--- a/Basic_HTML_and_HTML5.html
+++ b/Basic_HTML_and_HTML5.html
@@ -17,5 +17,32 @@
 
 <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
 
+
 <!-- Comments in HTML start with and end with a -->
 
+
+<!-- Comment out your h1 element and your p element, but not your h2 element. -->
+<!--
+<h1>Hello World</h1>
+-->
+<h2>CatPhotoApp</h2>
+<!--
+<p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
+-->
+
+
+<h2>CatPhotoApp</h2>
+
+<p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
+
+<h2>CatPhotoApp</h2>
+
+<main>  
+  <p>    
+    Kitty ipsum dolor sit amet, shed        everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
+  </p>
+
+  <p>   
+     Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.
+   </p>
+</main>
