--- a/Basic_HTML_and_HTML5.html
+++ b/Basic_HTML_and_HTML5.html
@@ -12,15 +12,13 @@
 
 <!-- 4 -->
 <h1>Hello World</h1>
-
 <h2>CatPhotoApp</h2>
-
 <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
 
-
+<!-- 5 -->
 <!-- Comments in HTML start with and end with a -->
 
-
+<!-- 6 -->
 <!-- Comment out your h1 element and your p element, but not your h2 element. -->
 <!--
 <h1>Hello World</h1>
@@ -31,18 +29,29 @@
 -->
 
 
+<!-- 7 -->
 <h2>CatPhotoApp</h2>
-
 <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
 
-<h2>CatPhotoApp</h2>
 
+<!-- 8 -->
+<h2>CatPhotoApp</h2>
 <main>  
   <p>    
     Kitty ipsum dolor sit amet, shed        everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
   </p>
-
   <p>   
      Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.
    </p>
 </main>
+
+
+<!-- 9 -->
+<h2>CatPhotoApp</h2>
+<main>
+  <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="relaxing-cat">
+
+  <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
+  <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+</main>
+
