--- a/Basic_HTML_and_HTML5.html
+++ b/Basic_HTML_and_HTML5.html
@@ -38,7 +38,7 @@
 <h2>CatPhotoApp</h2>
 <main>  
   <p>    
-    Kitty ipsum dolor sit amet, shed        everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
+    Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.
   </p>
   <p>   
      Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.
@@ -46,7 +46,7 @@
 </main>
 
 
-<!-- 9 Add pic-->
+<!-- 9 Add Images to Your Website-->
 <h2>CatPhotoApp</h2>
 <main>
   <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="relaxing-cat">
@@ -56,7 +56,7 @@
 </main>
 
 
-<!-- 10 Add href -->
+<!-- 10 Link to External Pages with Anchor Elements -->
 <h2>CatPhotoApp</h2>
 <main>
   <a href="https://www.freecatphotoapp.com">cat photos</a>
@@ -82,3 +82,20 @@
 </main>
 
 <footer id="footer">Copyright Cat Photo App</footer>
+
+
+<!-- 12 Nest an Anchor Element within a Paragraph
+Nest the existing a element within a new p element. Do not create a new anchor tag. The new paragraph should have text that says View more cat photos, where cat photos is a link, and the rest is plain text. -->
+<h2>CatPhotoApp</h2>
+<main>
+  <p>
+    View more
+    <a href="https://www.freecatphotoapp.com" target="_blank">cat photos</a>
+  </p>
+  <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
+
+  <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
+  <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+</main>
+
+
