--- a/Basic_HTML_and_HTML5.html
+++ b/Basic_HTML_and_HTML5.html
@@ -156,3 +156,30 @@ Nest the existing a element within a new p element. Do not create a new anchor t
   <p>Top 3 things cats hate:</p>
 
 </main>
+
+
+<!-- 17 Create an Ordered List -->
+<!-- Ordered lists start with an opening <ol> element, followed by any number of <li> elements. Finally, ordered lists are closed with the </ol> tag. -->
+<h2>CatPhotoApp</h2>
+<main>
+  <p>Click here to view more <a href="#">cat photos</a>.</p>
+
+  <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+
+  <p>Things cats love:</p>
+  <ul>
+    <li>cat nip</li>
+    <li>laser pointers</li>
+    <li>lasagna</li>
+  </ul>
+  <p>Top 3 things cats hate:</p>
+  <ol>
+    <li>Water</li>
+    <li>Dogs</li>
+    <li>Kids</li>
+  </ol>
+  
+</main>
+
+
+
