--- a/Basic_CSS.html
+++ b/Basic_CSS.html
@@ -120,3 +120,132 @@ Classes allow you to use the same CSS styles on multiple HTML elements. You can 
 </main>
 
 
+<!-- 5 Change the Font Size of an Element
+Font size is controlled by the font-size CSS property, like this:
+h1 {
+  font-size: 30px;
+} -->
+
+<style>
+  .red-text {
+    color: red;
+  }
+  p {
+    font-size: 16px;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+  <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
+</main>
+
+
+<!-- 6 Set the Font Family of an Element
+You can set which font an element should use, by using the font-family property.
+For example, if you wanted to set your h2 element's font to sans-serif, you would use the following CSS:
+h2 {
+  font-family: sans-serif;
+} -->
+
+<style>
+  .red-text {
+    color: red;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+  <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
+</main>
+
+
+<!-- 7 Import a Google Font
+In addition to specifying common fonts that are found on most operating systems, 
+we can also specify non-standard, custom web fonts for use on our website. 
+There are many sources for web fonts on the Internet. 
+For this example we will focus on the Google Fonts library.
+
+To import a Google Font, you can copy the font's URL from the Google Fonts library and then paste it in your HTML. 
+For this challenge, we'll import the Lobster font. 
+To do this, copy the following code snippet and paste it into the top of your code editor (before the opening style element):
+
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+Now you can use the Lobster font in your CSS by using Lobster as the FAMILY_NAME as in the following example:
+
+font-family: FAMILY_NAME, GENERIC_NAME;
+The GENERIC_NAME is optional, and is a fallback font in case the other specified font is not available. 
+This is covered in the next challenge.
+
+Family names are case-sensitive and need to be wrapped in quotes if there is a space in the name. 
+For example, you need quotes to use the "Open Sans" font, but not to use the Lobster font. -->
+
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+
+<style>
+  .red-text {
+    color: red;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+  h2 {    
+    font-family: Lobster;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+  ------
+</main>
+
+
+8 Specify How Fonts Should Degrade
+There are several default fonts that are available in all browsers. 
+These generic font families include monospace, serif and sans-serif.
+
+When one font isn't available, you can tell the browser to "degrade" to another font.
+
+For example, if you wanted an element to use the Helvetica font, 
+but degrade to the sans-serif font when Helvetica isn't available, you will specify it as follows:
+
+p {
+  font-family: Helvetica, sans-serif;
+}
+Generic font family names are not case-sensitive. Also, they do not need quotes because they are CSS keywords.
+
+To begin, apply the monospace font to the h2 element, so that it now has two fonts - Lobster and monospace.
+
+In the last challenge, you imported the Lobster font using the link tag. 
+Now comment out that import of the Lobster font (using the HTML comments you learned before) from Google Fonts so that it isn't available anymore.
+Notice how your h2 element degrades to the monospace font.
+
+Note: If you have the Lobster font installed on your computer, you won't see the degradation because your browser is able to find the font.
+
+<!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
+<style>
+  .red-text {
+    color: red;
+  }
+
+  h2 {
+    font-family: Lobster, monospace;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+</style>
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+  ------
+</main>
+
