--- a/Basic_CSS.html
+++ b/Basic_CSS.html
@@ -207,7 +207,7 @@ For example, you need quotes to use the "Open Sans" font, but not to use the Lob
 </main>
 
 
-8 Specify How Fonts Should Degrade
+<!-- 8 Specify How Fonts Should Degrade
 There are several default fonts that are available in all browsers. 
 These generic font families include monospace, serif and sans-serif.
 
@@ -227,7 +227,7 @@ In the last challenge, you imported the Lobster font using the link tag.
 Now comment out that import of the Lobster font (using the HTML comments you learned before) from Google Fonts so that it isn't available anymore.
 Notice how your h2 element degrades to the monospace font.
 
-Note: If you have the Lobster font installed on your computer, you won't see the degradation because your browser is able to find the font.
+Note: If you have the Lobster font installed on your computer, you won't see the degradation because your browser is able to find the font. -->
 
 <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
 <style>
@@ -248,4 +248,44 @@ Note: If you have the Lobster font installed on your computer, you won't see the
 <main>
   ------
 </main>
+
+
+<!-- 8 Size Your Images
+CSS has a property called width that controls an element's width. Just like with fonts, we'll use px (pixels) to specify the image's width.
+For example, if we wanted to create a CSS class called larger-image that gave HTML elements a width of 500 pixels, we'd use:
+
+<style>
+  .larger-image {
+    width: 500px;
+  }
+</style> -->
+
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<style>
+  .red-text {
+    color: red;
+  }
+
+  .smaller-image {
+    width: 100px;
+  }
+
+  h2 {
+    font-family: Lobster, monospace;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+  <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
+
+  <a href="#"><img class="smaller-image" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+</main>
+
+
 
