--- a/Basic_CSS.html
+++ b/Basic_CSS.html
@@ -338,4 +338,72 @@ Remember that you can apply multiple classes to an element using its class attri
 </main>
 
 
+<!-- 10 Add Rounded Corners with border-radius
+ We can round out those corners with a CSS property called border-radius. -->
 
+.thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 10px;
+  }
+
+
+<!-- 11 Make Circular Images with a border-radius
+In addition to pixels, you can also specify the border-radius using a percentage. -->
+
+.thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 10px;
+  }
+
+  .smaller-image {
+    width: 100px;
+    border-radius: 50%;
+  }
+
+
+<!-- 12 Give a Background Color to a div Element
+You can set an element's background color with the background-color property.
+For example, if you wanted an element's background color to be green, you'd put this within your style element:
+
+.green-background {
+  background-color: green;
+} -->
+
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<style> 
+
+  .silver-background {
+    background-color: silver;
+  }
+  
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+
+  <div class="silver-background">
+    <p>Things cats love:</p>
+  </div>
+</main>
+  
+
+<!-- 13 Set the id of an Element
+In addition to classes, each HTML element can also have an id attribute.
+
+There are several benefits to using id attributes: 
+You can use an id to style a single element and later you'll learn that you can use them to select and modify specific elements with JavaScript.
+
+id attributes should be unique. 
+Browsers won't enforce this, but it is a widely agreed upon best practice. 
+So please don't give more than one element the same id attribute.
+
+Here's an example of how you give your h2 element the id of cat-photo-app:
+<h2 id="cat-photo-app"> -->
+  
+<form id="cat-photo-form" action="https://freecatphotoapp.com/submit-cat-photo">
+  
+  
