--- a/Basic_CSS.html
+++ b/Basic_CSS.html
@@ -407,3 +407,33 @@ Here's an example of how you give your h2 element the id of cat-photo-app:
 <form id="cat-photo-form" action="https://freecatphotoapp.com/submit-cat-photo">
   
   
+<!-- 14 Use an id Attribute to Style an Element
+One cool thing about id attributes is that, like classes, you can style them using CSS.
+  
+However, an id is not reusable and should only be applied to one element. 
+An id also has a higher specificity (importance) than a class so 
+  if both are applied to the same element and have conflicting styles, the styles of the id will be applied.
+
+Here's an example of how you can take your element with the id attribute of cat-photo-element and give it the background color of green. In your style element:
+
+#cat-photo-element {
+  background-color: green;
+}
+Note that inside your style element, you always reference classes by putting a . in front of their names. 
+You always reference ids by putting a # in front of their names. -->
+   
+<style>
+  
+  #cat-photo-form {
+    background-color: green;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
+<main>
+  <form action="https://freecatphotoapp.com/submit-cat-photo" id="cat-photo-form">    
+  </form>
+</main>
+  
+  
+  
