--- a/Basic_CSS_3.html
+++ b/Basic_CSS_3.html
@@ -15,4 +15,50 @@ body {
 </style>
 
 
-2
+<!-- 2 Inherit Styles from the Body Element
+Now we've proven that every HTML page has a body element, and that its body element can also be styled with CSS.
+Remember, you can style your body element just like any other HTML element, and all your other elements will inherit your body element's styles.
+
+First, create a h1 element with the text Hello World
+Then, let's give all elements on your page the color of green by adding color: green; to your body element's style declaration.
+Finally, give your body element the font-family of monospace by adding font-family: monospace; to your body element's style declaration. -->
+
+<style>
+  body {
+    background-color: black;
+    color: green;
+    font-family: monospace;
+  }
+
+</style>
+
+<h1>
+  Hello World
+</h1>
+
+
+<!-- 3 Prioritize One Style Over Another
+Sometimes your HTML elements will receive multiple styles that conflict with one another.
+For example, your h1 element can't be both green and pink at the same time.
+Let's see what happens when we create a class that makes text pink, then apply it to an element. 
+Will our class override the body element's color: green; CSS property?
+
+Create a CSS class called pink-text that gives an element the color pink.
+Give your h1 element the class of pink-text. -->
+
+<style>
+  body {
+    background-color: black;
+    font-family: monospace;
+    color: green;
+  }
+
+  .pink-text {
+    color: pink;
+  }
+</style>
+<h1 class="pink-text">Hello World!</h1>
+
+
+4 
+
