--- a/Basic_CSS_3.html
+++ b/Basic_CSS_3.html
@@ -498,4 +498,61 @@ In the penguin class, change the black value to gray, the gray value to white, a
 </div>
 
 
-14 
+<!-- 14 Create a custom CSS Variable
+To create a CSS variable, you just need to give it a name with two hyphens in front of it and assign it a value like this:
+
+--penguin-skin: gray;
+This will create a variable named --penguin-skin and assign it the value of gray. 
+Now you can use that variable elsewhere in your CSS to change the value of other properties to gray.
+
+In the penguin class, create a variable name --penguin-skin and give it a value of gray. -->
+
+<style>
+  .penguin {
+    /* Only change code below this line */
+    --penguin-skin: gray;
+    /* Only change code above this line */
+    position: relative;
+    margin: auto;
+    display: block;
+    margin-top: 5%;
+    width: 300px;
+    height: 300px;
+  }
+</style>
+
+
+<!-- 15 Use a custom CSS Variable
+After you create your variable, you can assign its value to other CSS properties by referencing the name you gave it.
+
+background: var(--penguin-skin);
+This will change the background of whatever element you are targeting to gray because that is the value of the --penguin-skin variable. 
+Note that styles will not be applied unless the variable names are an exact match.
+
+Apply the --penguin-skin variable to the background property of the penguin-top, penguin-bottom, right-hand and left-hand classes. -->
+
+<style>
+  .penguin {
+    --penguin-skin: gray;
+    position: relative;
+    margin: auto;
+    display: block;
+    margin-top: 5%;
+    width: 300px;
+    height: 300px;
+  }
+
+  .penguin-top {
+    top: 10%;
+    left: 25%;
+
+    /* Change code below this line */
+    background: var(--penguin-skin);
+    /* Change code above this line */
+
+    width: 50%;
+    height: 45%;
+    border-radius: 70% 70% 60% 60%;
+  }
+</style>
+
