--- a/Basic_CSS_4.html
+++ b/Basic_CSS_4.html
@@ -48,3 +48,60 @@ Align the h4 tag's text, which says "Google", to the center. Then justify the pa
   </div>
 </div>
 
+
+<!-- 2 Adjust the Width of an Element Using the width Property
+You can specify the width of an element using the width property in CSS. 
+Values can be given in relative length units (such as em), absolute length units (such as px), 
+or as a percentage of its containing parent element. 
+Here's an example that changes the width of an image to 220px:
+
+img {
+  width: 220px;
+}
+
+Add a width property to the entire card and set it to an absolute value of 245px. 
+Use the fullCard class to select the element. -->
+
+<style>  
+  .fullCard {
+
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px 5px;
+    padding: 4px;
+    width: 245px;
+    
+  }
+</style>
+
+
+<!-- 3 Adjust the Height of an Element Using the height Property
+You can specify the height of an element using the height property in CSS, similar to the width property. 
+Here's an example that changes the height of an image to 20px:
+
+img {
+  height: 20px;
+}
+
+Add a height property to the h4 tag and set it to 25px. -->
+
+<style>
+  h4 {
+    text-align: center;
+    height: 25px;
+
+  }
+</style>
+
+
+<!-- 4 Use the strong Tag to Make Text Bold
+To make text bold, you can use the strong tag. 
+This is often used to draw attention to text and symbolize that it is important. 
+With the strong tag, the browser applies the CSS of font-weight: bold; to the element.
+
+Wrap a strong tag around the text Stanford University inside the p tag (do not include the period). -->
+
+<p>... were Ph.D. students at <strong>Stanford University</strong>.</p>
+
+
+5 
