--- a/Basic_CSS_4.html
+++ b/Basic_CSS_4.html
@@ -104,4 +104,47 @@ Wrap a strong tag around the text Stanford University inside the p tag (do not i
 <p>... were Ph.D. students at <strong>Stanford University</strong>.</p>
 
 
-5 
+<!-- 5 Use the u Tag to Underline Text
+To underline text, you can use the u tag. 
+This is often used to signify that a section of text is important, or something to remember. 
+With the u tag, the browser applies the CSS of text-decoration: underline; to the element.
+
+Wrap the u tag only around the text Ph.D. students.
+
+Note: Try to avoid using the u tag when it could be confused for a link. Anchor tags also have a default underlined formatting. -->
+
+<p>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</p>
+
+
+<!-- 6 Use the em Tag to Italicize Text
+To emphasize text, you can use the em tag. 
+This displays text as italicized, as the browser applies the CSS of font-style: italic; to the element.
+
+Wrap an em tag around the contents of the paragraph tag to give it emphasis. -->
+
+<p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</em></p>
+
+
+<!-- 7 Use the s Tag to Strikethrough Text
+To strikethrough text, which is when a horizontal line cuts across the characters, you can use the s tag. 
+It shows that a section of text is no longer valid. 
+With the s tag, the browser applies the CSS of text-decoration: line-through; to the element.
+
+Wrap the s tag around Google inside the h4 tag and then add the word Alphabet beside it without the strikethrough formatting. -->
+
+<h4><s>Google</s> Alphabet</h4>
+
+
+<!-- 8 Create a Horizontal Line Using the hr Element
+You can use the hr tag to add a horizontal line across the width of its containing element. 
+This can be used to define a change in topic or to visually separate groups of content.
+
+Add an hr tag underneath the h4 which contains the card title.
+
+Note: In HTML, hr is a self-closing tag, and therefore doesn't need a separate closing tag. -->
+
+<h4><s>Google</s>Alphabet</h4>
+      <hr>
+
+
+9 
