--- a/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
@@ -1,8 +1,41 @@
 <!-- Step 1
 As you learned in the last few steps of the Cat Photo App, there is a basic structure needed to start building your web page.
-
 Add the <!DOCTYPE html> tag, and an html element. -->
 
 <!DOCTYPE html>
 <html>
 </html>
+
+
+<!-- Step 2
+Add a head element within the html element, so you can add a title element. The title element's text should be Cafe Menu. -->
+
+<head>
+  <title>Cafe Menu</title>
+</head>
+
+
+<!-- Step 3
+The title is one of several elements that provide extra information not visible on the web page, but it is useful for search engines or how the page gets displayed.
+
+Inside the head element, nest a meta element with an attribute named charset set to the value utf-8 to tell the browser 
+how to encode characters for the page. Note that meta elements are self-closing. -->
+
+  <head>
+    <meta charset="utf-8">
+    <title>Cafe Menu</title>
+  </head>
+
+
+<!-- Step 4
+To prepare to create some actual content, add a body element below the head element. -->
+  <body>
+  </body>
+
+<!-- Step 5
+The name of the cafe is CAMPER CAFE. Add an h1 element within your body element. 
+Give it the name of the cafe in capitalized letters to make it stand out. -->
+
+  <body>
+    <h1>CAMPER CAFE</h1>
+  </body>
