--- a/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
@@ -26,3 +26,27 @@ Inside the footer, add a p element. Then, nest an anchor (a) element in the p th
           <a href="https://www.freecodecamp.org">Visit our website</a>
         </p>
       </footer>
+
+
+<!-- Step 66
+Add a second p element below the one with the link and give it the text 123 Free Code Camp Drive. -->
+
+        <p>
+          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+        </p>
+
+
+<!-- Step 67
+You can use an hr element to display a divider between sections of different content.
+
+First, add an hr element between the first header element and the main element. Note that hr elements are self closing. -->
+
+      <header>
+        ///////
+      </header>
+      <hr>
+      <main>
+        /////////
+      </main>
+
+
