--- a/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
@@ -50,3 +50,35 @@ First, add an hr element between the first header element and the main element. 
       </main>
 
 
+<!-- Step 68
+The default properties of an hr element will make it appear as a thin light grey line. 
+You can change the height of the line by specifying a value for the height property.
+
+Change the height the hr element to be 3px. -->
+
+hr {
+  height: 3px;
+}
+
+
+<!-- Step 69
+Change the background color of the hr element to brown so it matches the color of the coffee beans. -->
+
+hr {
+  height: 3px;
+  background-color: brown;
+}
+
+
+<!-- Step 70
+Notice the grey color along the edges of the line. Those edges are known as borders. Each side of an element can have a different color or they can all be the same.
+
+Make all the edges of the hr element the same color as the background of it using the border-color property. -->
+
+hr {
+  height: 3px;
+  background-color: brown;
+  border-color: brown;
+}
+
+
