Update 1 CSS Color Markers.html

--- a/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
@@ -26,3 +26,39 @@ Within the head element, nest a title element with the text Colored Markers. -->
   <head>
     <title>Colored Markers</title>
   </head>
+
+
+<!-- Step 4
+To tell browsers how to encode characters on your page, set the charset to utf-8. 
+utf-8 is a universal character set that includes almost every character from all human languages.
+
+Inside the head element, nest a meta element with the attribute charset set to utf-8. Remember that meta elements are self-closing, and do not need a closing tag. -->
+
+  <head>
+    <title>Colored Markers</title>
+    <meta charset="utf-8">
+  </head>
+
+
+<!-- Step 5
+Finally, use a viewport <meta> tag to make sure your page looks the same on all devices.
+
+Nest a self-closing meta element within the head. Give it a name attribute set to viewport and a content attribute set to width=device-width, initial-scale=1.0. -->
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Colored Markers</title>
+  </head>
+
+
+<!-- Step 6
+Now you're ready to start adding content to the page.
+
+Within the body, nest an h1 element with the text CSS Color Markers. -->
+
+  <body>
+    <h1>CSS Color Markers</h1>
+  </body>
+
+
