Update 2 CSS Color Markers.html

--- a/Responsive Web Design(NEW)/2 CSS Color Markers/2 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/2 CSS Color Markers.html
@@ -83,3 +83,48 @@ h1 {
 }
 
 
+<!-- Step 41
+Now it's time to add other details to the markers, starting with the first one.
+
+In the first marker div element, change the class one to red. -->
+
+      <div class="marker red">
+      </div>
+
+
+<!-- Step 42
+Update the .one class selector to target the new red class. -->
+
+.red {
+  background-color: rgb(0, 0, 0);
+}
+
+
+<!-- Step 43
+And update the rgb function in the .red rule so that the red value is at the max. -->
+
+.red {
+  background-color: rgb(255, 0, 0);
+}
+
+
+<!-- Step 44
+Next, change the class two to green in the second marker div, and the class three to blue in the third marker div. -->
+
+      <div class="marker green">
+      </div>
+      <div class="marker blue">
+      </div>
+
+
+<!-- Step 45
+Update the CSS class selector .two so it targets the new green class. And update the .three selector so it targets the new blue class. -->
+
+.green {
+  background-color: rgb(0, 0, 0);
+}
+.blue {
+  background-color: rgb(0, 0, 0);
+}
+
+
