Update 2 CSS Color Markers.html

--- a/Responsive Web Design(NEW)/2 CSS Color Markers/2 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/2 CSS Color Markers.html
@@ -369,3 +369,13 @@ Clean up your code a little more by removing the gradientDirection argument from
 }
 
 
+<!-- Step 66
+Now you'll apply a gradient to the blue marker, this time using the hsl function as color arguments.
+
+In the .blue CSS rule, change the background-color property to background. -->
+
+.blue {
+  background: hsl(240, 100%, 50%);
+}
+
+
